--- a/static-site-server/webpage/index.html
+++ b/static-site-server/webpage/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Static Site nginx</h1>
+    <h1>Azure Cloud Computing Labs</h1>
+    <ul>
+    	<li>Lab 1</li>
+	<li>Lab 2</li>
+    </ul>
     <script src="index.js"></script>
   </body>
 </html>
